<resources>
    <string name="app_name">project2EmojiFinal</string>
    <string name="normalEyes">normal</string>
    <string name="happyEyes">happy</string>
    <string name="winkyEyes">winky</string>
    <string name="xEyes">x\'s</string>
    <string name="xEyes2">dead</string>
    <string name="smileMouth">smile</string>
    <string name="sadMouth">frown</string>
    <string name="openMouth">open</string>
    <string name="tongueOutMouth">tongue out</string>
    <string name="maskAccessory">mask</string>
    <string name="sunglassesAccessory">sunglasses</string>
    <string name="hatAccessory">hat</string>
    <string name="glassesAccessory">glasses</string>
    <string name="censorBarExtra">censor bar</string>
    <string name="smokeExtra">smoke</string>
    <string name="tearExtra">tear</string>
    <string name="zsExtra">Zs</string>
    <string name="resetButton">reset</string>
    <string name="textEyes">Pick Your Eyes</string>
    <string name="textViewEyes">Pick Your Eyes</string>
    <string name="textViewMouth">Pick Your Mouth</string>
    <string name="textViewAccessories">Pick Your Accessories</string>
    <string name="textViewExtras">Pick Your Extras</string>
    <string-array name="eyes">
        <item>none</item>
        <item>normal eyes</item>
        <item>happy eyes</item>
        <item>winky eyes</item>
        <item>x eyes</item>
    </string-array>
</resources>